@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+ * Fixed a bug in the Gene glyph that caused the browser to crash if a
+   gene feature has no subfeatures.
+
 # Release 1.10.0     2013-07-30 14:25:06 EST5EDT
 
 ## Major improvements
